pink update ver2

--- a/contact/index.html
+++ b/contact/index.html
@@ -182,9 +182,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="bk-black"><span>Q.</span>&nbsp;&nbsp;初めてでも大丈夫ですか?</h3>
+                    <h3 class="question"><span>Q.</span>&nbsp;&nbsp;初めてでも大丈夫ですか?</h3>
                     <span class="qa_btn"></span>
-                    <div class="bk-gray">
+                    <div class="answer bk-pink">
                         <p class=""><span>A.</span>&nbsp;&nbsp;もちろんです！誰でも最初は未経験です。スタッフがチャットレディの基本を丁寧に教えます、最低時給保障もあるので安心してゆっくりお仕事を覚えて下さい。</p>
                     </div>
                     
@@ -192,45 +192,45 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="bk-black"><span>Q.</span>&nbsp;&nbsp;男性とはどのような話をするの？</h3>
+                    <h3 class="question"><span>Q.</span>&nbsp;&nbsp;男性とはどのような話をするの？</h3>
                     <span class="qa_btn"></span>
-                    <div class="bk-gray">
+                    <div class="answer bk-pink">
                         <p class=""><span>A.</span>&nbsp;&nbsp;基本的にはどんな会話でもOKです。世間話し、自分の趣味の話し、ただ笑顔で話しを聞いてくれるだけで癒される男性が沢山います。</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="bk-black"><span>Q.</span>&nbsp;&nbsp;容姿に自信がないけど大丈夫ですか？</h3>
+                    <h3 class="question"><span>Q.</span>&nbsp;&nbsp;容姿に自信がないけど大丈夫ですか？</h3>
                     <span class="qa_btn"></span>
-                    <div class="bk-gray">
+                    <div class="answer bk-pink">
                         <p class=""><span>A.</span>&nbsp;&nbsp;年齢や容姿は気にしなくて大丈夫です、色んなタイプの男性がいるので笑顔でいれば貴女の良い所を好きになってくれるお客様が沢山集まってくれます。もし気になる方は弊社スタイリストがメイクの仕方等丁寧にお教えします。</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="bk-black"><span>Q.</span>&nbsp;&nbsp;勤務時間はどうやって決めるのですか？</h3>
+                    <h3 class="question"><span>Q.</span>&nbsp;&nbsp;勤務時間はどうやって決めるのですか？</h3>
                     <span class="qa_btn"></span>
-                    <div class="bk-gray">
+                    <div class="answer bk-pink">
                         <p class=""><span>A.</span>&nbsp;&nbsp;勤務日、勤務時間は完全フリーなので、24時間365日いつでも好きな時に働くことが出来ます。</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="bk-black"><span>Q.</span>&nbsp;&nbsp;ノルマはありますか？</h3>
+                    <h3 class="question"><span>Q.</span>&nbsp;&nbsp;ノルマはありますか？</h3>
                     <span class="qa_btn"></span>
-                    <div class="bk-gray">
+                    <div class="answer bk-pink">
                         <p class=""><span>A.</span>&nbsp;&nbsp;ノルマは一切ないので安心して下さい。</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="bk-black"><span>Q.</span>&nbsp;&nbsp;アダルト行為はやらなきゃダメ？</h3>
+                    <h3 class="question nm"><span>Q.</span>&nbsp;&nbsp;アダルト行為はやらなきゃダメ？</h3>
                     <span class="qa_btn"></span>
-                    <div class="bk-gray nm">
+                    <div class="answer bk-pink">
                         <p class=""><span>A.</span>&nbsp;&nbsp;セリーヌチャットは色んなサイトと契約してます、ノンアダルトでお仕事される場合はアダルト行為はNGとなっているのでもしエッチな要求をされても断って大丈夫です。</p>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
         </div>
     </section>
 
-    <section id="flow" class="triangle baju">
+    <section id="flow" class="triangle pink">
         <h2 class="main_cap en_title"><small>FLOW</small><br />ご応募からの流れ</h2>
         <div class="container">
             <div class="row">
@@ -246,40 +246,48 @@
             </div>
             <div class="row cms-video mt-16">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <img src="../res/comming-soon-video.jpg" alt="comming soon for the video" />
+                    <img src="res/comming-soon-video.jpg" alt="comming soon for the video" />
                     <p class="txt">- ご応募からの流れ -</p>
                 </div>
             </div>
             <div class="row mt-16">
-                    <ul class="numbers1">
-                        <li class="col-12 col-md-8 offset-md-2">
-                            <h3>ご応募・お問い合わせ</h3>
-                            <p>まずは、ご応募下さい。応募は、LINE@、メール、お電話のいずれかで受け付けています。お好きなご連絡方法でご応募下さい。</p>
-                        </li>
-                        <li class="col-12 col-md-8 offset-md-2">
-                            <h3>ご連絡・ご面談</h3>
-                            <p>お問い合わせいただいた方は担当者よりご希望の時間帯にご連絡致します。その際に疑問などありましたら、お気軽にお尋ね下さい。実際に働きたいと感じた方は、ご面談を行い、ご希望や条件や働き方など決めていきます。</p>
-                        </li>
-                        <li class="col-12 col-md-8 offset-md-2">
-                            <h3>準備・登録</h3>
-                            <p>お給料をお支払いするための登録などを行います。</p>
-                        </li>
-                        <li class="col-12 col-md-8 offset-md-2">
-                            <h3>仕事開始・サポート</h3>
-                            <p>登録や準備等終わったら早速お仕事スタートです、お仕事をスタートして分からない事があったらスタッフにどんどん聞いて下さい。</p>
-                        </li>
-                    </ul>
+                <ul class="numbers1">
+                    <li class="col-12 col-md-8 offset-md-2">
+                        <h3>ご応募・お問い合わせ</h3>
+                        <p>まずは、ご応募下さい。応募は、LINE@、メール、お電話のいずれかで受け付けています。お好きなご連絡方法でご応募下さい。</p>
+                    </li>
+                    <li class="col-12 col-md-8 offset-md-2">
+                        <h3>ご連絡・ご面談</h3>
+                        <p>お問い合わせいただいた方は担当者よりご希望の時間帯にご連絡致します。その際に疑問などありましたら、お気軽にお尋ね下さい。実際に働きたいと感じた方は、ご面談を行い、ご希望や条件や働き方など決めていきます。</p>
+                    </li>
+                    <li class="col-12 col-md-8 offset-md-2">
+                        <h3>準備・登録</h3>
+                        <p>お給料をお支払いするための登録などを行います。</p>
+                    </li>
+                    <li class="col-12 col-md-8 offset-md-2">
+                        <h3>仕事開始・サポート</h3>
+                        <p>登録や準備等終わったら早速お仕事スタートです、お仕事をスタートして分からない事があったらスタッフにどんどん聞いて下さい。</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="row mt-16">
+                <div class="col-12">
+                    <div class="center">
+                        <div id="apply_btn" class="btn">今すぐ応募</div>
+                    </div>
                 </div>
+            </div>
         </div>
     </section>
 
-    
-
-    <footer>
+    <footer class="bk-pink_v">
         <h2>
             福岡チャトレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
+        <div>
+            <small>写真提供：shutterstock, 福岡市</small>
+        </div>
 	    <p id="copyright">&copy;2021 celine.</p><!-- copyright -->
     </footer>
 
