--- a/contact/index.html
+++ b/contact/index.html
@@ -246,7 +246,7 @@
             </div>
             <div class="row cms-video mt-16">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <img src="res/comming-soon-video.jpg" alt="comming soon for the video" />
+                    <img src="../res/comming-soon-video.jpg" alt="comming soon for the video" />
                     <p class="txt">- ご応募からの流れ -</p>
                 </div>
             </div>
