add video for apply

--- a/index.html
+++ b/index.html
@@ -617,8 +617,9 @@
             </div>
             <div class="row cms-video mt-16">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <img src="res/comming-soon-video.jpg" alt="comming soon for the video" />
-                    <p class="txt">- ご応募からの流れ -</p>
+                    <!-- <img src="res/comming-soon-video.jpg" alt="comming soon for the video" />
+                    <p class="txt">- ご応募からの流れ -</p> -->
+                    <video src="./res/apply-flow.mp4" preload="metadata" playinline controls poster="./res/apply-flow-poster.jpg"></video>
                 </div>
             </div>
             <div class="row mt-16">
