add thanks page

--- a/index.html
+++ b/index.html
@@ -677,5 +677,18 @@
         var tab = (!sp && (ua.indexOf('iPad') > 0 || ua.indexOf('Android') > 0))
     </script>
 
+    <script type="text/javascript">
+        (function () {
+            var tagjs = document.createElement("script");
+            var s = document.getElementsByTagName("script")[0];
+            tagjs.async = true;
+            tagjs.src = "//s.yjtag.jp/tag.js#site=0mXMiH5";
+            s.parentNode.insertBefore(tagjs, s);
+        }());
+    </script>
+    <noscript>
+        <iframe src="//b.yjtag.jp/iframe?c=0mXMiH5" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+    </noscript>
+
 </body>
 </html>
