--- a/index.html
+++ b/index.html
@@ -652,6 +652,10 @@
         </div>
     </section>
 
+    <section id="blogs">
+        <div id="feed"></div>
+    </section>
+
     <footer class="bk-pink_v">
         <h2>
             福岡チャトレディで働くなら<br />
