--- a/contact/index.html
+++ b/contact/index.html
@@ -98,7 +98,7 @@
                                         <p class="formTitle">お問い合わせ</p>
                                         <div class="d-flex flex-column flex-md-row">
                                             <div class="form-check">
-                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="面接の予約をしたい" checked="checked">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="面接の予約をしたい" checked />
                                                 <label class="form-check-label" for="inlineRadio1">面接の予約をしたい</label>
                                             </div>
                                             <div class="form-check">
@@ -168,12 +168,12 @@
                                         <small>弊社では面接を実施する場所をご指定いたくことが可能です。</small>
                                         <div class="form-group">
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="placeoptions" id="place1" value="場所を指定して面接をする" />
-                                                <label class="form-check-label" for="place1">場所を指定して面接をする</label>
+                                                <input class="form-check-input" type="radio" name="placeoptions" id="place2" value="弊社指定の場所で面接する" checked />
+                                                <label class="form-check-label" for="place2">弊社指定の場所で面接する</label>
                                             </div>
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="placeoptions" id="place2" value="弊社指定の場所で面接する" />
-                                                <label class="form-check-label" for="place2">弊社指定の場所で面接する</label>
+                                                <input class="form-check-input" type="radio" name="placeoptions" id="place1" value="場所を指定して面接をする" />
+                                                <label class="form-check-label" for="place1">場所を指定して面接をする</label>
                                             </div>
                                         </div>
                                         <div>
@@ -186,7 +186,7 @@
                                         <small>面接時の履歴書は不要です。年齢確認のため、顔写真付きの身分証明書をご持参ください。</small>
                                         <div class="form-group">
                                             <div class="form-check form-check-inline">
-                                                <input class="form-check-input" type="radio" name="idoptions" id="driver" value="運転免許証">
+                                                <input class="form-check-input" type="radio" name="idoptions" id="driver" value="運転免許証" checked>
                                                 <label class="form-check-label" for="driver">運転免許証</label>
                                             </div>
                                             <div class="form-check form-check-inline">
