--- a/index.html
+++ b/index.html
@@ -654,9 +654,9 @@
 
     <section id="blogs">
         <h2 class="main_cap en_title"><small>BLOGS</small><br />スタッフブログ</h2>
-        <div id="feed">
-            <div class="container">
-                <div class="row">
+        <div id="feed" class="container">
+            <!-- <div  class="container"> -->
+                <!-- <div class="row">
                     <div class="col-12 col-md-6 offset-md-3">
                         <a href="#">
                             <div class='d-flex'>
@@ -668,8 +668,8 @@
                             </div>
                         </a>
                     </div>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
         </div>
     </section>
 
