--- a/index.html
+++ b/index.html
@@ -654,23 +654,7 @@
 
     <section id="blogs">
         <h2 class="main_cap en_title"><small>BLOGS</small><br />スタッフブログ</h2>
-        <div id="feed" class="container">
-            <!-- <div  class="container"> -->
-                <!-- <div class="row">
-                    <div class="col-12 col-md-6 offset-md-3">
-                        <a href="#">
-                            <div class='d-flex'>
-                                <img class="" src="" alt="" />
-                                <div>
-                                    <p class="date"><small>2021.06.01 AM10:30</small></p>
-                                    <p class="blogtitle">test blog</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div> -->
-            <!-- </div> -->
-        </div>
+        <div id="feed" class="container"></div>
     </section>
 
     <footer class="bk-pink_v">
