--- a/index.html
+++ b/index.html
@@ -652,10 +652,10 @@
         </div>
     </section>
 
-    <section id="blogs">
+    <!-- <section id="blogs">
         <h2 class="main_cap en_title"><small>BLOGS</small><br />スタッフブログ</h2>
         <div id="feed" class="container"></div>
-    </section>
+    </section> -->
 
     <footer class="bk-pink_v">
         <h2>
