--- a/contact/index.html
+++ b/contact/index.html
@@ -58,11 +58,12 @@
             <ul>
                 <li data="header" goHome="true">HOME</li>
                 <li data="#chatlady" goHome="true"><small>ABOUT</small><br />お仕事について</li>
-                <li data="#benefit" goHome="true"><small>BENEFITS</small><br />セリーヌで働くメリット</li>
-                <li data="#office" goHome="true"><small>OFFICE</small><br />オフィス・お仕事環境</li>
+                <li data="#benefit" goHome="true"><small>BENEFITS</small><br />メリット</li>
+                <li data="#office" goHome="true"><small>OFFICE</small><br />オフィスについて</li>
                 <li data="#campain" goHome="false"><small>CAMPAIN</small><br />キャンペーン</li>
                 <li data="#qa" goHome="false"><small>Q&A</small><br />よくある質問</li>
-                <li data="#apply" goHome="false"><small>APPLY</small><br />ご応募はこちら</li>
+                <li data="#blog" goHome="true"><small>BLOG</small><br />スタッフブログ</li>
+                <li data="#apply" goHome="false"><small>APPLY</small><br />ご応募</li>
             </ul>
             </div>
         </div>
