--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
             <ul>
                 <li data="header" goHome="false">HOME</li>
                 <li data="#chatlady" goHome="false"><small>ABOUT</small><br />お仕事について</li>
-                <li data="#benefit" goHome="false"><small>BENEFITS</small><br />セリーヌで働くメリット</li>
-                <li data="#office" goHome="false"><small>OFFICE</small><br />オフィス・お仕事環境</li>
+                <li data="#benefit" goHome="false"><small>BENEFITS</small><br />メリット</li>
+                <li data="#office" goHome="false"><small>OFFICE</small><br />オフィスについて</li>
                 <li data="#campain" goHome="false"><small>CAMPAIN</small><br />キャンペーン</li>
                 <li data="#qa" goHome="false"><small>Q&A</small><br />よくある質問</li>
-                <li data="#apply" goHome="true"><small>APPLY</small><br />ご応募はこちら</li>
+                <li data="#blog" goHome="false"><small>BLOG</small><br />スタッフブログ</li>
+                <li data="#apply" goHome="true"><small>APPLY</small><br />ご応募</li>
+
+                
             </ul>
             </div>
         </div>
@@ -653,7 +656,7 @@
     </section>
 
     <section id="blogs">
-        <h2 class="main_cap en_title"><small>BLOGS</small><br />スタッフブログ</h2>
+        <h2 class="main_cap en_title"><small>BLOG</small><br />スタッフブログ</h2>
         <div id="feed" class="container"></div>
     </section>
 
