--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
         </div>
     </section>
 
-    <section id="blogs">
+    <section id="blog">
         <h2 class="main_cap en_title"><small>BLOG</small><br />スタッフブログ</h2>
         <div id="feed" class="container"></div>
     </section>
